增加用户注销的功能
